// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils test getDaysOfMonth weeks start with FRIDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| FRI | SAT | SUN | MON | TUE | WED | THU |
|  01 |  02 |  03 |  04 |  05 |  06 |  07 |
|  08 |  09 |  10 |  11 |  12 |  13 |  14 |
|  15 |  16 |  17 |  18 |  19 |  20 |  21 |
|  22 |  23 |  24 |  25 |  26 |  27 |  28 |
|  29 |  30 |  31 |     |     |     |     |
|     |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfMonth weeks start with MONDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| MON | TUE | WED | THU | FRI | SAT | SUN |
|     |     |     |     |  01 |  02 |  03 |
|  04 |  05 |  06 |  07 |  08 |  09 |  10 |
|  11 |  12 |  13 |  14 |  15 |  16 |  17 |
|  18 |  19 |  20 |  21 |  22 |  23 |  24 |
|  25 |  26 |  27 |  28 |  29 |  30 |  31 |
|     |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfMonth weeks start with SATURDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| SAT | SUN | MON | TUE | WED | THU | FRI |
|     |     |     |     |     |     |  01 |
|  02 |  03 |  04 |  05 |  06 |  07 |  08 |
|  09 |  10 |  11 |  12 |  13 |  14 |  15 |
|  16 |  17 |  18 |  19 |  20 |  21 |  22 |
|  23 |  24 |  25 |  26 |  27 |  28 |  29 |
|  30 |  31 |     |     |     |     |     |
`;

exports[`utils test getDaysOfMonth weeks start with SUNDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| SUN | MON | TUE | WED | THU | FRI | SAT |
|     |     |     |     |     |  01 |  02 |
|  03 |  04 |  05 |  06 |  07 |  08 |  09 |
|  10 |  11 |  12 |  13 |  14 |  15 |  16 |
|  17 |  18 |  19 |  20 |  21 |  22 |  23 |
|  24 |  25 |  26 |  27 |  28 |  29 |  30 |
|  31 |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfMonth weeks start with THURSDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| THU | FRI | SAT | SUN | MON | TUE | WED |
|     |  01 |  02 |  03 |  04 |  05 |  06 |
|  07 |  08 |  09 |  10 |  11 |  12 |  13 |
|  14 |  15 |  16 |  17 |  18 |  19 |  20 |
|  21 |  22 |  23 |  24 |  25 |  26 |  27 |
|  28 |  29 |  30 |  31 |     |     |     |
|     |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfMonth weeks start with TUESDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| TUE | WED | THU | FRI | SAT | SUN | MON |
|     |     |     |  01 |  02 |  03 |  04 |
|  05 |  06 |  07 |  08 |  09 |  10 |  11 |
|  12 |  13 |  14 |  15 |  16 |  17 |  18 |
|  19 |  20 |  21 |  22 |  23 |  24 |  25 |
|  26 |  27 |  28 |  29 |  30 |  31 |     |
|     |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfMonth weeks start with WEDNESDAY 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| WED | THU | FRI | SAT | SUN | MON | TUE |
|     |     |  01 |  02 |  03 |  04 |  05 |
|  06 |  07 |  08 |  09 |  10 |  11 |  12 |
|  13 |  14 |  15 |  16 |  17 |  18 |  19 |
|  20 |  21 |  22 |  23 |  24 |  25 |  26 |
|  27 |  28 |  29 |  30 |  31 |     |     |
|     |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfRangeMonth works without startDate and endDate 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
|
|     |     |     |     |     |  01 |  02 |
|  03 |  04 |  05 |  06 |  07 |  08 |  09 |
|  10 |  11 |  12 |  13 |  14 |  15 |  16 |
|  17 |  18 |  19 |  20 |  21 |  22 |  23 |
|  24 |  25 |  26 |  27 |  28 |  29 |  30 |
|  31 |     |     |     |     |     |     |
`;

exports[`utils test getDaysOfRangeMonth works without startDate and endDate 2`] = `
|                Feb 2021                 |
|-----------------------------------------|
|
|     |  01 |  02 |  03 |  04 |  05 |  06 |
|  07 |  08 |  09 |  10 |  11 |  12 |  13 |
|  14 |  15 |  16 |  17 |  18 |  19 |  20 |
|  21 |  22 |  23 |  24 |  25 |  26 |  27 |
|  28 |     |     |     |     |     |     |
|     |     |     |     |     |     |     |
`;
